--- a/AdsTest.ioc
+++ b/AdsTest.ioc
@@ -12,16 +12,17 @@ KeepUserPlacement=true
 Mcu.Family=STM32F4
 Mcu.IP0=FATFS
 Mcu.IP1=FSMC
-Mcu.IP10=USB_OTG_FS
+Mcu.IP10=USB_HOST
+Mcu.IP11=USB_OTG_FS
 Mcu.IP2=NVIC
 Mcu.IP3=RCC
-Mcu.IP4=SPI2
-Mcu.IP5=SYS
-Mcu.IP6=TIM3
-Mcu.IP7=USART2
-Mcu.IP8=USART6
-Mcu.IP9=USB_HOST
-Mcu.IPNb=11
+Mcu.IP4=SPI1
+Mcu.IP5=SPI2
+Mcu.IP6=SYS
+Mcu.IP7=TIM3
+Mcu.IP8=USART2
+Mcu.IP9=USART6
+Mcu.IPNb=12
 Mcu.Name=STM32F407V(E-G)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PE2
@@ -165,6 +166,7 @@ PA5.GPIO_Mode=GPIO_MODE_AF_PP
 PA5.GPIO_PuPd=GPIO_NOPULL
 PA5.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PA5.Locked=true
+PA5.Mode=Full_Duplex_Master
 PA5.Signal=SPI1_SCK
 PA6.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PA6.GPIO_Label=SPI1_MISO [LIS302DL_SDO]
@@ -172,6 +174,7 @@ PA6.GPIO_Mode=GPIO_MODE_AF_PP
 PA6.GPIO_PuPd=GPIO_NOPULL
 PA6.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PA6.Locked=true
+PA6.Mode=Full_Duplex_Master
 PA6.Signal=SPI1_MISO
 PA7.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PA7.GPIO_Label=SPI1_MOSI [LIS302DL_SDA/SDI/SDO]
@@ -179,6 +182,7 @@ PA7.GPIO_Mode=GPIO_MODE_AF_PP
 PA7.GPIO_PuPd=GPIO_NOPULL
 PA7.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PA7.Locked=true
+PA7.Mode=Full_Duplex_Master
 PA7.Signal=SPI1_MOSI
 PA8.GPIOParameters=GPIO_Label
 PA8.GPIO_Label=Joy1_SW
@@ -404,7 +408,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=SW4STM32
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_FSMC_Init-FSMC-false-HAL-true,5-MX_SPI2_Init-SPI2-false-HAL-true,6-MX_TIM3_Init-TIM3-false-HAL-true,7-MX_USART6_UART_Init-USART6-false-HAL-true,8-MX_USB_HOST_Init-USB_HOST-false-HAL-true,9-MX_FATFS_Init-FATFS-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_FSMC_Init-FSMC-false-HAL-true,5-MX_SPI2_Init-SPI2-false-HAL-true,6-MX_TIM3_Init-TIM3-false-HAL-true,7-MX_USART6_UART_Init-USART6-false-HAL-true,8-MX_USB_HOST_Init-USB_HOST-false-HAL-true,9-MX_FATFS_Init-FATFS-false-HAL-true,10-MX_SPI1_Init-SPI1-false-HAL-true
 RCC.48MHZClocksFreq_Value=48000000
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -442,6 +446,11 @@ SH.GPXTI0.0=GPIO_EXTI0
 SH.GPXTI0.ConfNb=1
 SH.GPXTI1.0=GPIO_EXTI1
 SH.GPXTI1.ConfNb=1
+SPI1.CalculateBaudRate=42.0 MBits/s
+SPI1.Direction=SPI_DIRECTION_2LINES
+SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
+SPI1.Mode=SPI_MODE_MASTER
+SPI1.VirtualType=VM_MASTER
 SPI2.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_32
 SPI2.CLKPhase=SPI_PHASE_2EDGE
 SPI2.CalculateBaudRate=1.3125 MBits/s
