--- a/AdsTest.ioc
+++ b/AdsTest.ioc
@@ -68,35 +68,36 @@ Mcu.Pin44=PA11
 Mcu.Pin45=PA12
 Mcu.Pin46=PA13
 Mcu.Pin47=PA14
-Mcu.Pin48=PC10
-Mcu.Pin49=PC12
+Mcu.Pin48=PA15
+Mcu.Pin49=PC10
 Mcu.Pin5=PH1-OSC_OUT
-Mcu.Pin50=PD0
-Mcu.Pin51=PD1
-Mcu.Pin52=PD2
-Mcu.Pin53=PD3
-Mcu.Pin54=PD4
-Mcu.Pin55=PD5
-Mcu.Pin56=PD6
-Mcu.Pin57=PD7
-Mcu.Pin58=PB3
-Mcu.Pin59=PB6
+Mcu.Pin50=PC12
+Mcu.Pin51=PD0
+Mcu.Pin52=PD1
+Mcu.Pin53=PD2
+Mcu.Pin54=PD3
+Mcu.Pin55=PD4
+Mcu.Pin56=PD5
+Mcu.Pin57=PD6
+Mcu.Pin58=PD7
+Mcu.Pin59=PB3
 Mcu.Pin6=PC0
-Mcu.Pin60=PB9
-Mcu.Pin61=PE0
-Mcu.Pin62=VP_FATFS_VS_USB
-Mcu.Pin63=VP_SYS_VS_Systick
-Mcu.Pin64=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin65=VP_USB_HOST_VS_USB_HOST_MSC_FS
+Mcu.Pin60=PB6
+Mcu.Pin61=PB9
+Mcu.Pin62=PE0
+Mcu.Pin63=VP_FATFS_VS_USB
+Mcu.Pin64=VP_SYS_VS_Systick
+Mcu.Pin65=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin66=VP_USB_HOST_VS_USB_HOST_MSC_FS
 Mcu.Pin7=PC2
 Mcu.Pin8=PC3
 Mcu.Pin9=PA0-WKUP
-Mcu.PinsNb=66
+Mcu.PinsNb=67
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407VGTx
-MxCube.Version=4.27.0
-MxDb.Version=DB.4.0.270
+MxCube.Version=5.0.0
+MxDb.Version=DB.5.0.0
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:false\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:false\:true
 NVIC.EXTI1_IRQn=true\:0\:0\:false\:false\:true\:true
@@ -149,6 +150,8 @@ PA14.GPIO_Label=SWCLK
 PA14.Locked=true
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
+PA15.Mode=NSS_Signal_Hard_Output
+PA15.Signal=SPI1_NSS
 PA2.Mode=Asynchronous
 PA2.Signal=USART2_TX
 PA3.Mode=Asynchronous
@@ -188,12 +191,8 @@ PA8.GPIOParameters=GPIO_Label
 PA8.GPIO_Label=Joy1_SW
 PA8.Locked=true
 PA8.Signal=GPIO_Input
-PA9.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_Mode
-PA9.GPIO_Label=VBUS_FS
-PA9.GPIO_Mode=GPIO_MODE_INPUT
-PA9.GPIO_PuPd=GPIO_NOPULL
 PA9.Locked=true
-PA9.Signal=USB_OTG_FS_VBUS
+PA9.Signal=GPIO_Output
 PB0.GPIOParameters=PinState,GPIO_Label
 PB0.GPIO_Label=ADS_CS
 PB0.Locked=true
@@ -391,7 +390,7 @@ ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32F407VGTx
-ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.21.0
+ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.23.0
 ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
@@ -446,10 +445,13 @@ SH.GPXTI0.0=GPIO_EXTI0
 SH.GPXTI0.ConfNb=1
 SH.GPXTI1.0=GPIO_EXTI1
 SH.GPXTI1.ConfNb=1
-SPI1.CalculateBaudRate=42.0 MBits/s
+SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_8
+SPI1.CLKPhase=SPI_PHASE_2EDGE
+SPI1.CalculateBaudRate=10.5 MBits/s
 SPI1.Direction=SPI_DIRECTION_2LINES
-SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
+SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,VirtualNSS,BaudRatePrescaler,CLKPhase
 SPI1.Mode=SPI_MODE_MASTER
+SPI1.VirtualNSS=VM_NSSHARD
 SPI1.VirtualType=VM_MASTER
 SPI2.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_32
 SPI2.CLKPhase=SPI_PHASE_2EDGE
@@ -466,9 +468,22 @@ USART2.IPParameters=VirtualMode,BaudRate
 USART2.VirtualMode=VM_ASYNC
 USART6.IPParameters=VirtualMode
 USART6.VirtualMode=VM_ASYNC
+USB_HOST.BSP.number=1
 USB_HOST.IPParameters=USBH_HandleTypeDef-MSC_FS,VirtualModeFS
 USB_HOST.USBH_HandleTypeDef-MSC_FS=hUsbHostFS
 USB_HOST.VirtualModeFS=Msc
+USB_HOST0.BSP.STBoard=false
+USB_HOST0.BSP.api=Unknown
+USB_HOST0.BSP.component=
+USB_HOST0.BSP.condition=
+USB_HOST0.BSP.i2caddr=0
+USB_HOST0.BSP.i2creg=
+USB_HOST0.BSP.instance=PA9
+USB_HOST0.BSP.ip=GPIO
+USB_HOST0.BSP.mode=Output
+USB_HOST0.BSP.name=Drive_VBUS_FS
+USB_HOST0.BSP.semaphore=
+USB_HOST0.BSP.solution=PA9
 USB_OTG_FS.IPParameters=VirtualMode,phy_itface
 USB_OTG_FS.VirtualMode=Host_Only
 USB_OTG_FS.phy_itface=HCD_PHY_EMBEDDED
