--- a/AdsTest.ioc
+++ b/AdsTest.ioc
@@ -25,19 +25,19 @@ Mcu.IP9=USART6
 Mcu.IPNb=12
 Mcu.Name=STM32F407V(E-G)Tx
 Mcu.Package=LQFP100
-Mcu.Pin0=PE2
-Mcu.Pin1=PE3
-Mcu.Pin10=PA2
-Mcu.Pin11=PA3
-Mcu.Pin12=PA4
-Mcu.Pin13=PA5
-Mcu.Pin14=PA6
-Mcu.Pin15=PA7
-Mcu.Pin16=PB0
+Mcu.Pin0=PE3
+Mcu.Pin1=PE4
+Mcu.Pin10=PA0-WKUP
+Mcu.Pin11=PA2
+Mcu.Pin12=PA3
+Mcu.Pin13=PA4
+Mcu.Pin14=PA5
+Mcu.Pin15=PA6
+Mcu.Pin16=PA7
 Mcu.Pin17=PB1
 Mcu.Pin18=PB2
 Mcu.Pin19=PE7
-Mcu.Pin2=PC14-OSC32_IN
+Mcu.Pin2=PE5
 Mcu.Pin20=PE8
 Mcu.Pin21=PE9
 Mcu.Pin22=PE10
@@ -48,7 +48,7 @@ Mcu.Pin26=PE14
 Mcu.Pin27=PE15
 Mcu.Pin28=PB10
 Mcu.Pin29=PB13
-Mcu.Pin3=PC15-OSC32_OUT
+Mcu.Pin3=PC14-OSC32_IN
 Mcu.Pin30=PB15
 Mcu.Pin31=PD8
 Mcu.Pin32=PD9
@@ -59,39 +59,38 @@ Mcu.Pin36=PD13
 Mcu.Pin37=PD14
 Mcu.Pin38=PD15
 Mcu.Pin39=PC6
-Mcu.Pin4=PH0-OSC_IN
+Mcu.Pin4=PC15-OSC32_OUT
 Mcu.Pin40=PC7
-Mcu.Pin41=PA8
-Mcu.Pin42=PA9
-Mcu.Pin43=PA10
-Mcu.Pin44=PA11
-Mcu.Pin45=PA12
-Mcu.Pin46=PA13
-Mcu.Pin47=PA14
-Mcu.Pin48=PC10
-Mcu.Pin49=PC12
-Mcu.Pin5=PH1-OSC_OUT
-Mcu.Pin50=PD0
-Mcu.Pin51=PD1
-Mcu.Pin52=PD2
-Mcu.Pin53=PD3
-Mcu.Pin54=PD4
-Mcu.Pin55=PD5
-Mcu.Pin56=PD6
-Mcu.Pin57=PD7
-Mcu.Pin58=PB3
-Mcu.Pin59=PB6
-Mcu.Pin6=PC0
-Mcu.Pin60=PB9
-Mcu.Pin61=PE0
-Mcu.Pin62=VP_FATFS_VS_USB
-Mcu.Pin63=VP_SYS_VS_Systick
-Mcu.Pin64=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin65=VP_USB_HOST_VS_USB_HOST_MSC_FS
-Mcu.Pin7=PC2
-Mcu.Pin8=PC3
-Mcu.Pin9=PA0-WKUP
-Mcu.PinsNb=66
+Mcu.Pin41=PA9
+Mcu.Pin42=PA10
+Mcu.Pin43=PA11
+Mcu.Pin44=PA12
+Mcu.Pin45=PA13
+Mcu.Pin46=PA14
+Mcu.Pin47=PC10
+Mcu.Pin48=PC12
+Mcu.Pin49=PD0
+Mcu.Pin5=PH0-OSC_IN
+Mcu.Pin50=PD1
+Mcu.Pin51=PD2
+Mcu.Pin52=PD3
+Mcu.Pin53=PD4
+Mcu.Pin54=PD5
+Mcu.Pin55=PD6
+Mcu.Pin56=PD7
+Mcu.Pin57=PB3
+Mcu.Pin58=PB6
+Mcu.Pin59=PB9
+Mcu.Pin6=PH1-OSC_OUT
+Mcu.Pin60=PE0
+Mcu.Pin61=VP_FATFS_VS_USB
+Mcu.Pin62=VP_SYS_VS_Systick
+Mcu.Pin63=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin64=VP_USB_HOST_VS_USB_HOST_MSC_FS
+Mcu.Pin7=PC0
+Mcu.Pin8=PC2
+Mcu.Pin9=PC3
+Mcu.PinsNb=65
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407VGTx
@@ -180,17 +179,8 @@ PA7.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA7.Locked=true
 PA7.Mode=Full_Duplex_Master
 PA7.Signal=SPI1_MOSI
-PA8.GPIOParameters=GPIO_Label
-PA8.GPIO_Label=Joy1_SW
-PA8.Locked=true
-PA8.Signal=GPIO_Input
 PA9.Locked=true
 PA9.Signal=GPIO_Output
-PB0.GPIOParameters=PinState,GPIO_Label
-PB0.GPIO_Label=ADS_CS
-PB0.Locked=true
-PB0.PinState=GPIO_PIN_SET
-PB0.Signal=GPIO_Output
 PB1.GPIOParameters=GPIO_PuPd,GPIO_Label
 PB1.GPIO_Label=ADS_DRDY
 PB1.GPIO_PuPd=GPIO_PULLDOWN
@@ -346,10 +336,6 @@ PE14.Mode=16b-d1
 PE14.Signal=FSMC_D11
 PE15.Mode=16b-d1
 PE15.Signal=FSMC_D12
-PE2.GPIOParameters=GPIO_Label
-PE2.GPIO_Label=Joy2_SW
-PE2.Locked=true
-PE2.Signal=GPIO_Input
 PE3.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label
 PE3.GPIO_Label=CS_I2C/SPI [LIS302DL_CS_I2C/SPI]
 PE3.GPIO_PuPd=GPIO_NOPULL
@@ -357,6 +343,14 @@ PE3.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PE3.Locked=true
 PE3.PinState=GPIO_PIN_SET
 PE3.Signal=GPIO_Output
+PE4.GPIOParameters=GPIO_Label
+PE4.GPIO_Label=ESP_ENABLE
+PE4.Locked=true
+PE4.Signal=GPIO_Output
+PE5.GPIOParameters=GPIO_Label
+PE5.GPIO_Label=ESP_RESET
+PE5.Locked=true
+PE5.Signal=GPIO_Output
 PE7.Mode=16b-d1
 PE7.Signal=FSMC_D4
 PE8.Mode=16b-d1
